--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "@glidejs/glide": "^3.6.0",
     "vite": "^5.2.8"
   },
